# ligand_grokking

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: README.md  fpocket_descriptors.csv  target_pocket_metadata.csv
scripts/: README.md  analyze_pockets_fpocket.py  analyze_run.py  bcd_svm.py  bcd_svm_out_of_core.py  bcd_svm_out_of_core_kernel.py  build_experimental_datasets.py  build_mutant_dataset.py  cluster_and_select.py  cluster_features.py  config.json  create_delta_lake.py  create_mutant_features.py  create_mutant_features_plm.py  create_mutant_splits_by_target.py  create_protein_hierarchy_labels.py  extract_ligands.py  get_mutations_polars.py  kernel_svm.py  launch_slurm_jobs.py  meta_analyzer.py  mpi_runner.py  optimized_classifier.py  optimized_classifier_kernel.py  p_value.py  pocket_characterization.py  pyproject.toml  resistance_classifier.py  run_curriculum_builder.py  scaffold_splitter.py  utils.py  visualize_analysis.py  visualize_curves.py
svgp/: svgp_classifier.py  train_classifier.py
