[project]
name = "ligand-grokking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "polars[deltalake]>=1.33.1",
    "rdkit>=2025.3.6",
    "scipy>=1.16.2",
]

[dependency-groups]
dev = [
    "jedi-language-server>=0.45.1",
    "ruff>=0.13.0",
]
